--- a/webApp/register.html
+++ b/webApp/register.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="/http/login">
+	<form action="/cookie/login">
 		账号：<input type="text" name="username" />
 		<br />
 		密码：<input type="text" name="password" />
